test/runnable/empty-enum-or-union.crow
main void()
	()

f void(a u)
	match a

f void(a e)
	match a

e enum

u union
